--- a/website/package.json
+++ b/website/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "react-toastify": "^7.0.3",
     "vercel": "^21.3.1"
   },
   "scripts": {
